directory structure update

--- a/notebooks/eda-1.ipynb
+++ b/notebooks/eda-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prerequisites to /notebooks/eda-1.pynb\n",
+    "\n",
+    "- Go to this [link](https://www.kaggle.com/datasets/robikscube/flight-delay-dataset-20182022) and download the dataset.\n",
+    "- Add 2021 datasets to directory <code> /datasets/Flights_2021/ </code>.\n",
+    "- Create a directory <code> /datasets/Flights_2021/ </code> to save the output.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../dataset/Flights_2020_5.csv', usecols=columns_to_use, index_col=False, low_memory=False)"
+    "df = pd.read_csv('../datasets/Flights_2021/Flights_2021_1.csv', usecols=columns_to_use, index_col=False, low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -101,106 +113,106 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2020-05-31</td>\n",
-       "      <td>14570</td>\n",
-       "      <td>RNO</td>\n",
-       "      <td>14107</td>\n",
-       "      <td>PHX</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>1454.0</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>11193</td>\n",
+       "      <td>CVG</td>\n",
+       "      <td>10721</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>730</td>\n",
+       "      <td>733.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1645</td>\n",
-       "      <td>1636.0</td>\n",
+       "      <td>939</td>\n",
+       "      <td>927.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2020-05-31</td>\n",
-       "      <td>14570</td>\n",
-       "      <td>RNO</td>\n",
-       "      <td>14679</td>\n",
-       "      <td>SAN</td>\n",
-       "      <td>810</td>\n",
-       "      <td>810.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-01-03</td>\n",
+       "      <td>11193</td>\n",
+       "      <td>CVG</td>\n",
+       "      <td>10721</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>730</td>\n",
+       "      <td>727.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>940</td>\n",
-       "      <td>937.0</td>\n",
+       "      <td>939</td>\n",
+       "      <td>924.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2020-05-31</td>\n",
-       "      <td>14576</td>\n",
-       "      <td>ROC</td>\n",
-       "      <td>10821</td>\n",
-       "      <td>BWI</td>\n",
-       "      <td>1355</td>\n",
-       "      <td>1350.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-01-04</td>\n",
+       "      <td>11193</td>\n",
+       "      <td>CVG</td>\n",
+       "      <td>10721</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>730</td>\n",
+       "      <td>737.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1505</td>\n",
-       "      <td>1454.0</td>\n",
+       "      <td>939</td>\n",
+       "      <td>938.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2020-05-31</td>\n",
-       "      <td>14576</td>\n",
-       "      <td>ROC</td>\n",
-       "      <td>10821</td>\n",
-       "      <td>BWI</td>\n",
-       "      <td>1030</td>\n",
-       "      <td>1028.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2021-01-07</td>\n",
+       "      <td>11193</td>\n",
+       "      <td>CVG</td>\n",
+       "      <td>10721</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>1715</td>\n",
+       "      <td>1710.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>1130.0</td>\n",
+       "      <td>1912</td>\n",
+       "      <td>1911.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2020-05-31</td>\n",
-       "      <td>14635</td>\n",
-       "      <td>RSW</td>\n",
-       "      <td>10397</td>\n",
-       "      <td>ATL</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2021-01-08</td>\n",
+       "      <td>11193</td>\n",
+       "      <td>CVG</td>\n",
+       "      <td>10721</td>\n",
+       "      <td>BOS</td>\n",
        "      <td>1715</td>\n",
-       "      <td>1708.0</td>\n",
+       "      <td>1711.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1900</td>\n",
-       "      <td>1845.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1912</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>14.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -210,28 +222,28 @@
       ],
       "text/plain": [
        "   Year  Quarter  Month  DayofMonth  FlightDate  OriginAirportID Origin  \\\n",
-       "0  2020        2      5          31  2020-05-31            14570    RNO   \n",
-       "1  2020        2      5          31  2020-05-31            14570    RNO   \n",
-       "2  2020        2      5          31  2020-05-31            14576    ROC   \n",
-       "3  2020        2      5          31  2020-05-31            14576    ROC   \n",
-       "4  2020        2      5          31  2020-05-31            14635    RSW   \n",
+       "0  2021        1      1           2  2021-01-02            11193    CVG   \n",
+       "1  2021        1      1           3  2021-01-03            11193    CVG   \n",
+       "2  2021        1      1           4  2021-01-04            11193    CVG   \n",
+       "3  2021        1      1           7  2021-01-07            11193    CVG   \n",
+       "4  2021        1      1           8  2021-01-08            11193    CVG   \n",
        "\n",
        "   DestAirportID Dest  CRSDepTime  DepTime  DepDelayMinutes  DepDel15  \\\n",
-       "0          14107  PHX        1500   1454.0              0.0       0.0   \n",
-       "1          14679  SAN         810    810.0              0.0       0.0   \n",
-       "2          10821  BWI        1355   1350.0              0.0       0.0   \n",
-       "3          10821  BWI        1030   1028.0              0.0       0.0   \n",
-       "4          10397  ATL        1715   1708.0              0.0       0.0   \n",
+       "0          10721  BOS         730    733.0              3.0       0.0   \n",
+       "1          10721  BOS         730    727.0              0.0       0.0   \n",
+       "2          10721  BOS         730    737.0              7.0       0.0   \n",
+       "3          10721  BOS        1715   1710.0              0.0       0.0   \n",
+       "4          10721  BOS        1715   1711.0              0.0       0.0   \n",
        "\n",
        "   CRSArrTime  ArrTime  ArrDelayMinutes  ArrDel15  Cancelled  \n",
-       "0        1645   1636.0              0.0       0.0        0.0  \n",
-       "1         940    937.0              0.0       0.0        0.0  \n",
-       "2        1505   1454.0              0.0       0.0        0.0  \n",
-       "3        1140   1130.0              0.0       0.0        0.0  \n",
-       "4        1900   1845.0              0.0       0.0        0.0  "
+       "0         939    927.0              0.0       0.0        0.0  \n",
+       "1         939    924.0              0.0       0.0        0.0  \n",
+       "2         939    938.0              0.0       0.0        0.0  \n",
+       "3        1912   1911.0              0.0       0.0        0.0  \n",
+       "4        1912   1926.0             14.0       0.0        0.0  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(192412, 18)"
+       "(379384, 18)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(180151, 18)"
+       "(375229, 18)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,16 +329,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(18064, 18)"
+       "(33937, 18)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,12 +356,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def eda(csv_file):\n",
-    "    df = pd.read_csv('./Flights_2021/'+csv_file+'.csv', usecols=columns_to_use, index_col=False, low_memory=False)\n",
+    "    df = pd.read_csv('../datasets/Flights_2021/'+csv_file+'.csv', usecols=columns_to_use, index_col=False, low_memory=False)\n",
     "    # Remove cancelled flights\n",
     "    cancelled_condition = (df['Cancelled']==1.0)\n",
     "    df.drop(df[cancelled_condition].index,inplace=True)\n",
@@ -357,13 +369,13 @@
     "    df = df[df[\"Origin\"].isin(airports_to_filter)]\n",
     "    df = df[df[\"Dest\"].isin(airports_to_filter)]\n",
     "    df.drop(['Cancelled'], axis=1, inplace=True)\n",
-    "    df.to_csv('./Flights_2021-eda1/'+csv_file+'.csv')\n",
+    "    df.to_csv('../datasets/Flights_2021-eda1/'+csv_file+'.csv')\n",
     "    return csv_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,25 +410,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./Flights_2021-eda1/Flights_2021_1.csv', './Flights_2021-eda1/Flights_2021_2.csv', './Flights_2021-eda1/Flights_2021_3.csv', './Flights_2021-eda1/Flights_2021_4.csv', './Flights_2021-eda1/Flights_2021_5.csv', './Flights_2021-eda1/Flights_2021_6.csv', './Flights_2021-eda1/Flights_2021_7.csv', './Flights_2021-eda1/Flights_2021_8.csv', './Flights_2021-eda1/Flights_2021_9.csv', './Flights_2021-eda1/Flights_2021_10.csv', './Flights_2021-eda1/Flights_2021_11.csv', './Flights_2021-eda1/Flights_2021_12.csv']\n"
+      "['../datasets/Flights_2021-eda1/Flights_2021_1.csv', '../datasets/Flights_2021-eda1/Flights_2021_2.csv', '../datasets/Flights_2021-eda1/Flights_2021_3.csv', '../datasets/Flights_2021-eda1/Flights_2021_4.csv', '../datasets/Flights_2021-eda1/Flights_2021_5.csv', '../datasets/Flights_2021-eda1/Flights_2021_6.csv', '../datasets/Flights_2021-eda1/Flights_2021_7.csv', '../datasets/Flights_2021-eda1/Flights_2021_8.csv', '../datasets/Flights_2021-eda1/Flights_2021_9.csv', '../datasets/Flights_2021-eda1/Flights_2021_10.csv', '../datasets/Flights_2021-eda1/Flights_2021_11.csv', '../datasets/Flights_2021-eda1/Flights_2021_12.csv']\n"
      ]
     }
    ],
    "source": [
-    "file_paths = [f'./Flights_2021-eda1/Flights_2021_{i}.csv' for i in range(1,13)]\n",
+    "file_paths = [f'../datasets/Flights_2021-eda1/Flights_2021_{i}.csv' for i in range(1,13)]\n",
     "print(file_paths)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +455,7 @@
        "(538051, 18)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +479,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +508,7 @@
        "(538051, 17)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,11 +519,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv('flights_2021_all.csv')"
+    "merged_df.to_csv('../datasets/flights_2021_all.csv')"
    ]
   },
   {
