Issue for emrge

--- a/notebooks/eda-2.ipynb
+++ b/notebooks/eda-2.ipynb
@@ -16,10 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/flights_2021_all.csv')\n",
-    "df_w = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/weather_data/ATL_2021.csv',parse_dates=['date'])\n",
-    "# df = pd.read_csv('../datasets/flights_2021_all.csv')\n",
-    "# df_w = pd.read_csv('../datasets/weather_data/ATL_2021.csv',parse_dates=['date'])"
+    "# df = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/flights_2021_all.csv')\n",
+    "# df_w = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/weather_data/ATL_2021.csv',parse_dates=['date'])\n",
+    "\n",
+    "df = pd.read_csv('../datasets/flights_2021_all.csv')\n",
+    "df_w = pd.read_csv('../datasets/weather_data/ATL_2021.csv',parse_dates=['date'])"
    ]
   },
   {
