--- a/notebooks/eda-1.ipynb
+++ b/notebooks/eda-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,11 @@
     "          \"Quarter\",\n",
     "          \"Month\",\n",
     "          \"DayofMonth\",\n",
+    "          \"DayOfWeek\",\n",
+    "          \"DistanceGroup\",\n",
+    "          \"Operating_Airline \",\n",
+    "          \"TaxiIn\",\n",
+    "          \"Marketing_Airline_Network\",\n",
     "          \"FlightDate\",\n",
     "          \"OriginAirportID\",\n",
     "          \"Origin\",\n",
@@ -57,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -94,20 +99,23 @@
        "      <th>Quarter</th>\n",
        "      <th>Month</th>\n",
        "      <th>DayofMonth</th>\n",
+       "      <th>DayOfWeek</th>\n",
        "      <th>FlightDate</th>\n",
+       "      <th>Marketing_Airline_Network</th>\n",
+       "      <th>Operating_Airline</th>\n",
        "      <th>OriginAirportID</th>\n",
        "      <th>Origin</th>\n",
-       "      <th>DestAirportID</th>\n",
-       "      <th>Dest</th>\n",
-       "      <th>CRSDepTime</th>\n",
+       "      <th>...</th>\n",
        "      <th>DepTime</th>\n",
        "      <th>DepDelayMinutes</th>\n",
        "      <th>DepDel15</th>\n",
+       "      <th>TaxiIn</th>\n",
        "      <th>CRSArrTime</th>\n",
        "      <th>ArrTime</th>\n",
        "      <th>ArrDelayMinutes</th>\n",
        "      <th>ArrDel15</th>\n",
        "      <th>Cancelled</th>\n",
+       "      <th>DistanceGroup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -117,20 +125,23 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>6</td>\n",
        "      <td>2021-01-02</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>9E</td>\n",
        "      <td>11193</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>10721</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>730</td>\n",
+       "      <td>...</td>\n",
        "      <td>733.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>939</td>\n",
        "      <td>927.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -138,20 +149,23 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "      <td>2021-01-03</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>9E</td>\n",
        "      <td>11193</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>10721</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>730</td>\n",
+       "      <td>...</td>\n",
        "      <td>727.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>939</td>\n",
        "      <td>924.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -159,20 +173,23 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>2021-01-04</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>9E</td>\n",
        "      <td>11193</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>10721</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>730</td>\n",
+       "      <td>...</td>\n",
        "      <td>737.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>939</td>\n",
        "      <td>938.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -180,20 +197,23 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7</td>\n",
+       "      <td>4</td>\n",
        "      <td>2021-01-07</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>9E</td>\n",
        "      <td>11193</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>10721</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>1715</td>\n",
+       "      <td>...</td>\n",
        "      <td>1710.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1912</td>\n",
        "      <td>1911.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -201,49 +221,62 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "      <td>2021-01-08</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>9E</td>\n",
        "      <td>11193</td>\n",
        "      <td>CVG</td>\n",
-       "      <td>10721</td>\n",
-       "      <td>BOS</td>\n",
-       "      <td>1715</td>\n",
+       "      <td>...</td>\n",
        "      <td>1711.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>1912</td>\n",
        "      <td>1926.0</td>\n",
        "      <td>14.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  Quarter  Month  DayofMonth  FlightDate  OriginAirportID Origin  \\\n",
-       "0  2021        1      1           2  2021-01-02            11193    CVG   \n",
-       "1  2021        1      1           3  2021-01-03            11193    CVG   \n",
-       "2  2021        1      1           4  2021-01-04            11193    CVG   \n",
-       "3  2021        1      1           7  2021-01-07            11193    CVG   \n",
-       "4  2021        1      1           8  2021-01-08            11193    CVG   \n",
+       "   Year  Quarter  Month  DayofMonth  DayOfWeek  FlightDate  \\\n",
+       "0  2021        1      1           2          6  2021-01-02   \n",
+       "1  2021        1      1           3          7  2021-01-03   \n",
+       "2  2021        1      1           4          1  2021-01-04   \n",
+       "3  2021        1      1           7          4  2021-01-07   \n",
+       "4  2021        1      1           8          5  2021-01-08   \n",
        "\n",
-       "   DestAirportID Dest  CRSDepTime  DepTime  DepDelayMinutes  DepDel15  \\\n",
-       "0          10721  BOS         730    733.0              3.0       0.0   \n",
-       "1          10721  BOS         730    727.0              0.0       0.0   \n",
-       "2          10721  BOS         730    737.0              7.0       0.0   \n",
-       "3          10721  BOS        1715   1710.0              0.0       0.0   \n",
-       "4          10721  BOS        1715   1711.0              0.0       0.0   \n",
+       "  Marketing_Airline_Network Operating_Airline   OriginAirportID Origin  ...  \\\n",
+       "0                        DL                 9E            11193    CVG  ...   \n",
+       "1                        DL                 9E            11193    CVG  ...   \n",
+       "2                        DL                 9E            11193    CVG  ...   \n",
+       "3                        DL                 9E            11193    CVG  ...   \n",
+       "4                        DL                 9E            11193    CVG  ...   \n",
        "\n",
-       "   CRSArrTime  ArrTime  ArrDelayMinutes  ArrDel15  Cancelled  \n",
-       "0         939    927.0              0.0       0.0        0.0  \n",
-       "1         939    924.0              0.0       0.0        0.0  \n",
-       "2         939    938.0              0.0       0.0        0.0  \n",
-       "3        1912   1911.0              0.0       0.0        0.0  \n",
-       "4        1912   1926.0             14.0       0.0        0.0  "
+       "   DepTime DepDelayMinutes  DepDel15  TaxiIn  CRSArrTime  ArrTime  \\\n",
+       "0    733.0             3.0       0.0    13.0         939    927.0   \n",
+       "1    727.0             0.0       0.0    10.0         939    924.0   \n",
+       "2    737.0             7.0       0.0     7.0         939    938.0   \n",
+       "3   1710.0             0.0       0.0     5.0        1912   1911.0   \n",
+       "4   1711.0             0.0       0.0     6.0        1912   1926.0   \n",
+       "\n",
+       "   ArrDelayMinutes  ArrDel15  Cancelled  DistanceGroup  \n",
+       "0              0.0       0.0        0.0              4  \n",
+       "1              0.0       0.0        0.0              4  \n",
+       "2              0.0       0.0        0.0              4  \n",
+       "3              0.0       0.0        0.0              4  \n",
+       "4             14.0       0.0        0.0              4  \n",
+       "\n",
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(379384, 18)"
+       "(379384, 23)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(375229, 18)"
+       "(375229, 23)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,16 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(33937, 18)"
+       "(33937, 23)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,16 +479,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(538051, 18)"
+       "(538051, 23)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,20 +499,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'Year', 'Quarter', 'Month', 'DayofMonth', 'FlightDate',\n",
+       "Index(['Unnamed: 0', 'Year', 'Quarter', 'Month', 'DayofMonth', 'DayOfWeek',\n",
+       "       'FlightDate', 'Marketing_Airline_Network', 'Operating_Airline ',\n",
        "       'OriginAirportID', 'Origin', 'DestAirportID', 'Dest', 'CRSDepTime',\n",
-       "       'DepTime', 'DepDelayMinutes', 'DepDel15', 'CRSArrTime', 'ArrTime',\n",
-       "       'ArrDelayMinutes', 'ArrDel15'],\n",
+       "       'DepTime', 'DepDelayMinutes', 'DepDel15', 'TaxiIn', 'CRSArrTime',\n",
+       "       'ArrTime', 'ArrDelayMinutes', 'ArrDel15', 'DistanceGroup'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(538051, 17)"
+       "(538051, 22)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
