--- a/notebooks/r-test.ipynb
+++ b/notebooks/r-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +25,14 @@
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import randint\n",
     "\n",
-    "\n",
+    "import pickle\n",
     "import xgboost as xgb\n",
     "from sklearn.metrics import mean_absolute_error,mean_squared_error,r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "(538040, 37)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "(538040, 37)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "(110164, 37)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "Name: Origin, Length: 102835, dtype: int64"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -600,17 +600,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.24550257690188323\n",
-      "RMSE: 0.49548216607854134\n",
-      "MAE: 0.24556740462221646\n",
-      "R2 Score : -0.8148210851701692\n"
+      "MSE: 0.24585102589867427\n",
+      "RMSE: 0.4958336675727802\n",
+      "MAE: 0.24590775015396585\n",
+      "R2 Score : -0.817396913882287\n"
      ]
     },
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
      "text": [
       "MSE: 0.12554209864833346\n",
       "RMSE: 0.35431920445882337\n",
-      "MAE: 0.257013465399465\n",
+      "MAE: 0.2570134653994651\n",
       "R2 Score : 0.07195903774743129\n"
      ]
     },
@@ -679,17 +679,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.12297454045822018\n",
-      "RMSE: 0.3506772596822043\n",
-      "MAE: 0.24474131429532223\n",
-      "R2 Score : 0.09093911852548853\n"
+      "MSE: 0.12297451804590924\n",
+      "RMSE: 0.3506772277264511\n",
+      "MAE: 0.24474119759897167\n",
+      "R2 Score : 0.09093928420331954\n"
      ]
     },
     {
@@ -712,17 +712,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.12308257011483215\n",
-      "RMSE: 0.35083125589780645\n",
-      "MAE: 0.2450261282337634\n",
-      "R2 Score : 0.09014053424536728\n"
+      "MSE: 0.12314620126133881\n",
+      "RMSE: 0.35092193043658415\n",
+      "MAE: 0.24450367433765374\n",
+      "R2 Score : 0.08967015569451409\n"
      ]
     },
     {
@@ -756,17 +756,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.13277319864565926\n",
-      "RMSE: 0.3643805684249083\n",
-      "MAE: 0.2502594822117366\n",
-      "R2 Score : 0.01850480150385181\n"
+      "MSE: 0.13313632466538203\n",
+      "RMSE: 0.3648785067188557\n",
+      "MAE: 0.25088813976856505\n",
+      "R2 Score : 0.015820476290311802\n"
      ]
     },
     {
@@ -796,17 +796,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.13886430828822402\n",
-      "RMSE: 0.372645016454298\n",
-      "MAE: 0.25153009626916467\n",
-      "R2 Score : -0.026522319396096172\n"
+      "MSE: 0.1380990446014716\n",
+      "RMSE: 0.37161679806148645\n",
+      "MAE: 0.25101860555573563\n",
+      "R2 Score : -0.020865284378543514\n"
      ]
     },
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -846,19 +846,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/biraj/yes/envs/env-ait-ml/lib/python3.8/site-packages/xgboost/core.py:160: UserWarning: [08:31:07] WARNING: /Users/runner/work/xgboost/xgboost/src/c_api/c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
+      "  warnings.warn(smsg, UserWarning)\n",
       "/var/folders/yl/xw6g0vqx5cqfc51vfpmd7m1m0000gn/T/ipykernel_45589/1708493081.py:14: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  perf_df = perf_df.append({\"Regressors\": regressor_name,\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'rf_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/biraj/Desktop/Github/flight-prediction-api/notebooks/r-test.ipynb Cell 35\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/biraj/Desktop/Github/flight-prediction-api/notebooks/r-test.ipynb#X62sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m yhat \u001b[39m=\u001b[39m best_xgb_model\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/biraj/Desktop/Github/flight-prediction-api/notebooks/r-test.ipynb#X62sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m perf_df \u001b[39m=\u001b[39m print_metrics(y_test, yhat, \u001b[39m\"\u001b[39m\u001b[39mXGBRegressor_GridSearch\u001b[39m\u001b[39m\"\u001b[39m, perf_df)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/biraj/Desktop/Github/flight-prediction-api/notebooks/r-test.ipynb#X62sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mdel\u001b[39;00m rf_model\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/biraj/Desktop/Github/flight-prediction-api/notebooks/r-test.ipynb#X62sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mdel\u001b[39;00m yhat\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rf_model' is not defined"
      ]
     }
    ],
@@ -880,6 +871,11 @@
     "\n",
     "grid_search = GridSearchCV(xgb_model, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
     "grid_search.fit(X_train, y_train)\n",
+    "best_xgb_model = grid_search.best_estimator_\n",
+    "filename = '../models/regression-xg-boost-1.pkl' \n",
+    "best_xgb_model.save_model(filename)\n",
+    "\n",
+    "# pickle.dump(grid_search, open(filename,'wb'))\n",
     "\n",
     "best_xgb_model = grid_search.best_estimator_\n",
     "yhat = best_xgb_model.predict(X_test)\n",
@@ -891,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -930,74 +926,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>LinearRegression</th>\n",
        "      <td>0.123398</td>\n",
        "      <td>0.351281</td>\n",
        "      <td>0.245157</td>\n",
        "      <td>0.087809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>Lasso_GridSearch</th>\n",
        "      <td>0.123375</td>\n",
        "      <td>0.351247</td>\n",
        "      <td>0.245623</td>\n",
        "      <td>0.087982</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>Ridge_GridSearch</th>\n",
        "      <td>0.123397</td>\n",
        "      <td>0.351279</td>\n",
        "      <td>0.245173</td>\n",
        "      <td>0.087816</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>DecisionTreeRegressor_GridSearch</th>\n",
        "      <td>0.123269</td>\n",
        "      <td>0.351097</td>\n",
        "      <td>0.244186</td>\n",
        "      <td>0.088764</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>0.245503</td>\n",
-       "      <td>0.495482</td>\n",
-       "      <td>0.245567</td>\n",
-       "      <td>-0.814821</td>\n",
+       "      <th>DecisionTreeRegressor</th>\n",
+       "      <td>0.245851</td>\n",
+       "      <td>0.495834</td>\n",
+       "      <td>0.245908</td>\n",
+       "      <td>-0.817397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>GradientBoostingRegressor_GridSearch</th>\n",
        "      <td>0.125542</td>\n",
        "      <td>0.354319</td>\n",
        "      <td>0.257013</td>\n",
        "      <td>0.071959</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
+       "      <th>GradientBoostingRegressor</th>\n",
        "      <td>0.122975</td>\n",
        "      <td>0.350677</td>\n",
        "      <td>0.244741</td>\n",
        "      <td>0.090939</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>0.123083</td>\n",
-       "      <td>0.350831</td>\n",
-       "      <td>0.245026</td>\n",
-       "      <td>0.090141</td>\n",
+       "      <th>RandomForestRegressor_RandomSearch</th>\n",
+       "      <td>0.123146</td>\n",
+       "      <td>0.350922</td>\n",
+       "      <td>0.244504</td>\n",
+       "      <td>0.089670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>0.132773</td>\n",
-       "      <td>0.364381</td>\n",
-       "      <td>0.250259</td>\n",
-       "      <td>0.018505</td>\n",
+       "      <th>RandomForestRegressor</th>\n",
+       "      <td>0.133136</td>\n",
+       "      <td>0.364879</td>\n",
+       "      <td>0.250888</td>\n",
+       "      <td>0.015820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>0.138864</td>\n",
-       "      <td>0.372645</td>\n",
-       "      <td>0.251530</td>\n",
-       "      <td>-0.026522</td>\n",
+       "      <th>ExtraTreesRegressor</th>\n",
+       "      <td>0.138099</td>\n",
+       "      <td>0.371617</td>\n",
+       "      <td>0.251019</td>\n",
+       "      <td>-0.020865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XGBRegressor_GridSearch</th>\n",
@@ -1011,22 +1007,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                              MSE      RMSE       MAE        R2\n",
-       "Regressors                                                     \n",
-       "NaN                      0.123398  0.351281  0.245157  0.087809\n",
-       "NaN                      0.123375  0.351247  0.245623  0.087982\n",
-       "NaN                      0.123397  0.351279  0.245173  0.087816\n",
-       "NaN                      0.123269  0.351097  0.244186  0.088764\n",
-       "NaN                      0.245503  0.495482  0.245567 -0.814821\n",
-       "NaN                      0.125542  0.354319  0.257013  0.071959\n",
-       "NaN                      0.122975  0.350677  0.244741  0.090939\n",
-       "NaN                      0.123083  0.350831  0.245026  0.090141\n",
-       "NaN                      0.132773  0.364381  0.250259  0.018505\n",
-       "NaN                      0.138864  0.372645  0.251530 -0.026522\n",
-       "XGBRegressor_GridSearch  0.122816  0.350452  0.244601  0.092108"
+       "                                           MSE      RMSE       MAE        R2\n",
+       "Regressors                                                                  \n",
+       "LinearRegression                      0.123398  0.351281  0.245157  0.087809\n",
+       "Lasso_GridSearch                      0.123375  0.351247  0.245623  0.087982\n",
+       "Ridge_GridSearch                      0.123397  0.351279  0.245173  0.087816\n",
+       "DecisionTreeRegressor_GridSearch      0.123269  0.351097  0.244186  0.088764\n",
+       "DecisionTreeRegressor                 0.245851  0.495834  0.245908 -0.817397\n",
+       "GradientBoostingRegressor_GridSearch  0.125542  0.354319  0.257013  0.071959\n",
+       "GradientBoostingRegressor             0.122975  0.350677  0.244741  0.090939\n",
+       "RandomForestRegressor_RandomSearch    0.123146  0.350922  0.244504  0.089670\n",
+       "RandomForestRegressor                 0.133136  0.364879  0.250888  0.015820\n",
+       "ExtraTreesRegressor                   0.138099  0.371617  0.251019 -0.020865\n",
+       "XGBRegressor_GridSearch               0.122816  0.350452  0.244601  0.092108"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
