Comments for eda1,eda2 and viz

--- a/notebooks/eda-1.ipynb
+++ b/notebooks/eda-1.ipynb
@@ -561,6 +561,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "\n",
+    "1. This notebook combines each month's aircraft status and merges them to create one single dataset. To get the received csv file please fulfill the Prerequisites at the top of this notebook. \n",
+    "2. Here, we have filtered the dataset to include data from the top 15 busiest airport. The columns have been filtered as well."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
