--- a/notebooks/eda-2.ipynb
+++ b/notebooks/eda-2.ipynb
@@ -16,11 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/flights_2021_all.csv')\n",
-    "df_w = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/weather_data/ATL_2021.csv',parse_dates=['date'])\n",
-    "\n",
-    "# df = pd.read_csv('../datasets/flights_2021_all.csv')\n",
-    "# df_w = pd.read_csv('../datasets/weather_data/ATL_2021.csv',parse_dates=['date'])"
+    "df = pd.read_csv('../datasets/flights_2021_all.csv')\n",
+    "df_w = pd.read_csv('../datasets/weather_data/ATL_2021.csv',parse_dates=['date'])"
    ]
   },
   {
@@ -707,14 +704,14 @@
     }
    ],
    "source": [
-    "csv_folder = '/Users/biraj/Desktop/Github/flight-prediction-api/datasets/weather_data/test/'\n",
+    "csv_folder = '../datasets/weather_data/test/'\n",
     "concatenated_data = pd.DataFrame()\n",
     "for file_name in os.listdir(csv_folder):\n",
     "    print(file_name)\n",
     "    if file_name!='.DS_Store':\n",
     "        df_ = pd.read_csv(csv_folder+file_name)\n",
     "        concatenated_data = pd.concat([concatenated_data, df_], ignore_index=True)\n",
-    "concatenated_data.to_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/weather_merged.csv')\n"
+    "concatenated_data.to_csv('../datasets/weather_merged.csv')\n"
    ]
   },
   {
@@ -748,7 +745,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_w = pd.read_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/weather_merged.csv',parse_dates=['ScaledCRSDepTime'])\n"
+    "df_w = pd.read_csv('../datasets/weather_merged.csv',parse_dates=['ScaledCRSDepTime'])\n"
    ]
   },
   {
@@ -1342,8 +1339,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df.to_csv('/Users/biraj/Desktop/Github/flight-prediction-api/datasets/final_dataset.csv')"
+    "merged_df.to_csv('../datasets/final_dataset.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary\n",
+    "\n",
+    "1. First the weather data for all the major airport cities from directory <code>/datasets/weather_data</code> is combined and a file <code>/datasets/weather_merged.csv</code> is created. \n",
+    "2. The file generated at 1 and the file received from eda-1 is merged on <code>ScaledCRSDepTime</code> and <code>Origin</code> columns. The final output of the file is stored in directory <code>/datasets/Flights_2021/final_dataset-add.csv</code>. The file is not added in this repo because of the size. Press this [button](https://drive.google.com/file/d/13H98BcH-7ojUKEEZRDzSrAx4Oq5J_Gp6/view?usp=sharing) to download the dataset. (Note: You need to be logged in with your ait email to access the data.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
